  - BigTrafficWidget: zoom range to 5km when opening big radar via the FlarmGauge
  - terrain: added 2 new terrain ramps for use in very flat countries
  - terrain: fix terrain shading at highest zoom level and improve DPI scaling #440
  - add head wind component to V GND Infobox #1439
  - add V task leg Infobox #1767
  - PEV start wait/window times now have second accuraccy #1099
  - show station names in airspace details dialog
  - show squawk code in airspace details dialog
  - ability to send squawk code from airspace details dialog to transponder
  - add support for a dedicated north-up map page layout
  - the thermal assistant InfoBox is now clickable
  - nearest airspace InfoBoxes (horizontal and vertical) are now clickable
    to open airspace details dialog #406
  - Add support for multiple airspace files in UI
  - Add support for multiple waypoint files in UI
  - Add support for multiple  airfields or details waypoint in UI
  - File list dialogs use multi-select widget for selection
  - QuickMenu: revamped look
  - QuickMenu: sane cursor control
  - add kinetic drag scrolling to vertical scroll panels
  - improve touch screen tap-vs-drag detection
  - implement interaction rules and selection management for InfoBoxes
  - draw separator between top widget and map
  - keep popups centered on visible map
  - improve margin handling for different screen orientations
  - fix OpenGL panels not clearing background
  - fix layout overlap and improve navigation in analysis dialog
  - fix map tap not dismissing menu when there is no GPS fix #2142
  - fix selected InfoBox title color in dark mode
  - show help text directly at the bottom of picker dialogs instead of
    behind a Help button #2143
  - fix map scale indicator shifting up when any menu is active
  - add inline help descriptions for settings that were missing them
  - InfoBoxes with a single action now open their dialog directly on
    tap instead of showing a redundant menu