@@ -177,7 +177,7 @@ see
 see
  & \ref{sec:taskabort}
  & \ref{sec:markers}
- & \ref{sec:markers}
+ & \ref{sec:pilotevent}
  & \ref{sec:waypointdetails}
 \end{tabularx}}
 
