@@ -377,9 +377,9 @@ type allows the pilot to enter the following parameters
   \item [Finish height ref.] This specifies whether the minimum finish height 
     is referenced to ground level of the finish point (``AGL'') or Mean Sea Level (``MSL'')
 
-  \item [PEV start wait time] This specifies an interval in minutes between
-   pilot presses the \emph{Pilot Event} (see \ref{sec:pilotevent}) button is
-   pressed and start window opens. If set to 0, the start will open
+  \item [PEV start wait time] This specifies an interval in minutes between the
+   pilot presses the \emph{Pilot Event} (see \ref{sec:pilotevent}) button and start 
+   window opens. If set to 0, the start will open
    immediately after \emph{Pilot Event} button is pressed.
 
   \item [PEV start window] This specifies an interval in minutes during which
