@@ -268,11 +268,15 @@ target points remaining in minimum AAT time.}
 distance according to the configured contest rule set.}
 \ibi{Task progress}{Progress}{Clock-like display of distance remaining along 
 task, showing achieved task points.}
-\ibi{Start open/close countdown}{Start open}{Time left until the start point 
-opens or closes.}
-\ibi{Start open/close countdown at reaching}{Start reach}{Time left until the 
-start point opens or closes, compared to the calculated time to reach it.}
-    
+\ibi{Start open/close countdown}{Start open}{Shows the time left until the start point 
+opens or closes. If the \emph{PEV Start Procedure} (\ref{sec:pilotevent}) is in use, 
+time relative to the PEV window is displayed. Else, the task defined \emph{Start 
+open/close time} (\ref{sec:task-type-racing}) are used. }
+\ibi{Start open/close countdown at reaching}{Start reach}{Shows the time left until the 
+start point opens or closes, compared to the calculated time to reach it. 
+If the \emph{PEV Start Procedure} (\ref{sec:pilotevent}) is in use, 
+time relative to the PEV window is displayed. Else, the task defined \emph{Start 
+open/close time} (\ref{sec:task-type-racing}) are used. }
     
 %%%%%%%%%%%
 \section{Waypoint}
