@@ -599,9 +599,9 @@ rules. \label{conf:taskrules}
   (AGL or MSL) while finishing the task.  Set to 0 for no limit.
 \item[Finish height ref.*]  Reference used for finish min.\ height rule,
   correspondingly to the start rule height reference.
-\item [PEV start wait time*] The default interval in minutes between
- pilot presses the \emph{Pilot Event} (see \ref{sec:pilotevent}) button is
- pressed and start window opens. If set to 0, the start will open
+\item [PEV start wait time*] The default interval in minutes between the
+ pilot presses the \emph{Pilot Event} (see \ref{sec:pilotevent}) button and 
+ start window opens. If set to 0, the start will open
  immediately after \emph{Pilot Event} button is pressed.
 \item [PEV start window*] The default interval in minutes during which
  the start window remains open when \emph{Pilot Event} (see \ref
